--- a/netishr/competency_dictionary_new.html
+++ b/netishr/competency_dictionary_new.html
@@ -105,7 +105,7 @@
 
     <div id="wrapper">
 
-                        <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -445,8 +445,14 @@
                         <li>
                             <a href="index.html">Home</a>
                         </li>
+                        <li>
+                            Job
+                        </li>
+                        <li>
+                            Competency Model
+                        </li>
                         <li class="active">
-                            <strong>Competency Dictionary</strong>
+                            <strong><a href="competency_dictionary.html">Competency Dictionary</a></strong>
                         </li>
                     </ol>
                 </div>
