Updated NetisHR files

--- a/netishr/training_administration_participants.html
+++ b/netishr/training_administration_participants.html
@@ -560,6 +560,23 @@
                                                     <td>
                                                     </td>
                                                 </tr>
+
+                                                <tr>
+                                                    <td>
+                                                        021003
+                                                    </td>
+                                                    <td>
+                                                        Toni Sutoni
+                                                    </td>
+                                                    <td>
+                                                        IT Programmer
+                                                    </td>
+                                                    <td>
+                                                        Pending Approval
+                                                    </td>
+                                                    <td>
+                                                    </td>
+                                                </tr>
                                             </tbody>
                                         </table>
                                     </div>
