Updated NetisHR files

--- a/netishr/index.html
+++ b/netishr/index.html
@@ -384,10 +384,15 @@
 
                 </nav>
             </div>
+            <div class="row white-bg dashboard-header">
+                <div class="col-md-12">
+                    <h4>Announcement</h4> Please submit leave request at the latest one day before your planned date.
+                </div>
+            </div>
             <div class="row border-bottom white-bg dashboard-header">
                 <div class="col-md-3">
                     <div>
-                        <h5>Notifications</h5>
+                        <h4>Notifications</h4>
                         <small>6 new notifications</small>
                     </div>
                     <ul class="list-group clear-list m-t">
@@ -429,14 +434,15 @@
                     </ul>
                 </div>
                 <div class="col-md-6">
-                    <div class="flot-chart dashboard-chart">
 
-                        <h4>
-                            Attendance chart
+                    <h4>
+                            Dashboard
                         </h4>
-                        <p>
-                            See your punctuality tendency.
-                        </p>
+                    <p>
+                        See your punctuality tendency.
+                    </p>
+
+                    <div class="flot-chart dashboard-chart">
                         <div class="flot-chart-content" id="flot-dashboard-chart"></div>
                     </div>
                     <!--
@@ -462,7 +468,7 @@
                     <div>
 
                         <a href="dashboard.html">
-                            <button type="button" class="btn btn-primary btn-xs">Go to Dashboard</button>
+                            <button type="button" class="btn btn-primary btn-xs pull-right">Go to Dashboard</button>
                         </a>
                     </div>
                 </div>
@@ -470,7 +476,7 @@
                     <div class="statistic-box">
 
                         <div>
-                            <h5>Events</h5>
+                            <h4>Events</h4>
                             <span class="label label-warning-light ">10 upcoming events</span>
                         </div>
                         <div class="ibox-content">
@@ -501,14 +507,21 @@
                 </div>
             </div>
             <div class="row white-bg dashboard-header">
-                <div class="col-md-3">
+                <div class="col-md-12">
+                    <h4>Shortcuts</h4>
+                </div>
+                <div class="col-md-4">
                     <div><a href="workflow.html">Approval Requests</a>
-                        <div class="small">You received 3 pending requests</div>
                     </div>
                     <p></p>
                     <div><a href="payroll_tax_calculation_details.html">Payslip</a>
-                        <div class="small">See your payslip</div>
                     </div>
+                </div>
+                <div class="col-md-4">
+                    <div><a href="workflow.html">Performance Evidence</a>
+                    </div>
+                </div>
+                <div class="col-md-4">
                 </div>
 
             </div>
