--- a/netishr/organisation_units.html
+++ b/netishr/organisation_units.html
@@ -438,7 +438,93 @@
                         <div class="dd" id="nestable">
                             <ol class="dd-list">
                                 <li class="dd-item" data-id="1">
-                                    <div class="dd-handle">1 - Lorem ipsum</div>
+                                    <div class="dd-handle">1 - Lorem ipsum
+                                    </div>
+                                    <div class="btn-group">
+                                        <button type="button" class="btn-white btn btn-xs" data-toggle="modal" data-target="#edit">Edit</button>
+                                        <div class="modal fade" id="edit" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-body">
+                                                        <div class="row">
+                                                            <h3>Set progress</h3>
+
+                                                            <p>Please set this person's progress</p>
+
+                                                            <form role="form">
+                                                                <div class="form-group">
+                                                                    <div class="row">
+                                                                        <label class="col-sm-2 control-label">Progress: </label>
+                                                                        <div class="col-sm-6">
+                                                                            <select data-placeholder="Choose a job title..." class="chosen-select" tabindex="2">
+                                                                                <option selected value="1">Not completed</option>
+                                                                                <option value="2">Completed</option>
+                                                                            </select>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="form-group">
+                                                                    <div class="row">
+                                                                        <label class="col-sm-2 control-label">Score/result: </label>
+                                                                        <div class="col-sm-6">
+                                                                            <input type="text" class="form-control pull-right" />
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="pull-right">
+                                                                    <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                                                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                                                </div>
+                                                            </form>
+
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <button type="button" class="btn-white btn btn-xs" data-toggle="modal" data-target="#delete">Delete</button>
+                                        <div class="modal fade" id="delete" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-body">
+                                                        <div class="row">
+                                                            <h3>Set progress</h3>
+
+                                                            <p>Please set this person's progress</p>
+
+                                                            <form role="form">
+                                                                <div class="form-group">
+                                                                    <div class="row">
+                                                                        <label class="col-sm-2 control-label">Progress: </label>
+                                                                        <div class="col-sm-6">
+                                                                            <select data-placeholder="Choose a job title..." class="chosen-select" tabindex="2">
+                                                                                <option selected value="1">Not completed</option>
+                                                                                <option value="2">Completed</option>
+                                                                            </select>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="form-group">
+                                                                    <div class="row">
+                                                                        <label class="col-sm-2 control-label">Score/result: </label>
+                                                                        <div class="col-sm-6">
+                                                                            <input type="text" class="form-control pull-right" />
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="pull-right">
+                                                                    <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                                                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                                                </div>
+                                                            </form>
+
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
                                 </li>
                                 <li class="dd-item" data-id="2">
                                     <div class="dd-handle">2 - Dolor sit</div>
